commit final changes

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 </div>
                 <div class="col-12 col-md-4 text-center d-flex justify-content-center" data-aos="fade-up">
                     <div class="card d-flex justify-content-center mb-5" style="width: 18rem;">
-                        <img src="assets/images/pavilions thumbnail.jpg" class="card-img-top home-card-img"
+                        <img src="assets/images/pavilions_thumbnail.jpg" class="card-img-top home-card-img"
                             alt="Swords pavilions Logo">
                         <div class="card-body">
                             <h5 class="card-title">Shopping</h5>
