--- a/shopping.html
+++ b/shopping.html
@@ -151,7 +151,7 @@
     <section>
         <div class="row" data-aos="fade-right">
             <div class="col-md-4">
-                <img class="history-image" src="assets/images/thumbnail-placeholder-.jpg" alt="">
+                <img class="history-image" src="assets/images/swords-pavilions.jpg" alt="Swords pavilions shopping centre">
             </div>
 
             <div class="history-paragraph col-md-8 p-5">
@@ -182,12 +182,12 @@
                     wanting to experience the local charm and energy of this fast-growing town.</p>
             </div>
             <div class="col-md-4">
-                <img class="history-image" src="assets/images/thumbnail-placeholder-.jpg" alt="">
+                <img class="history-image" src="assets/images/the-cock-tavern.jpg" alt="Cock tavern on Swords main street">
             </div>
         </div>
         <div class="row" data-aos="fade-right">
             <div class="col-md-4">
-                <img class="history-image" src="assets/images/thumbnail-placeholder-.jpg" alt="">
+                <img class="history-image" src="assets/images/gift-card.jpg" alt="Gift card">
             </div>
 
             <div class="history-paragraph col-md-8 p-5">
@@ -202,6 +202,9 @@
                     restaurants, and services across the area, making it a fantastic way to experience the vibrant
                     community and the diverse offerings that Swords is known for. It’s also a great option for tourists
                     looking to explore the town’s best spots while giving back to the local economy.</p>
+                    <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        Purchase Gift Card
+                    </button>
             </div>
         </div>
     </section>
