fix margin on shopping page

--- a/shopping.html
+++ b/shopping.html
@@ -134,7 +134,7 @@
         <img id="hero-image" src="hero-placeholder.jpg" alt="">
     </section>
 
-    <section id="home-about-section" class="text-center md-5 light-blue">
+    <section id="home-about-section" class="text-center pt-5 light-blue">
         <h1 id="home-about-heading">Shopping in Swords</h1>
         <p id="home-about-p" class="offset-md-3 offset-1 col-10 col-md-6 mt-3">
             Discover a vibrant shopping experience in Swords, where popular retail centers meet charming local
@@ -151,7 +151,7 @@
 
 
     <section>
-        <div class="row" data-aos="fade-right">
+        <div class="row overflow" data-aos="fade-right">
             <div class="col-md-4">
                 <img class="history-image" src="assets/images/swords-pavilions.jpg" alt="Swords pavilions shopping centre">
             </div>
@@ -170,7 +170,7 @@
                     suit every taste and budget, it’s no wonder the Pavillions is one of Swords’ most popular spots.</p>
             </div>
         </div>
-        <div class="row light-blue" data-aos="fade-left">
+        <div class="row light-blue overflow" data-aos="fade-left">
             <div class="history-paragraph col-md-8 p-5">
                 <h2>
                     Swords Main Street
@@ -187,7 +187,7 @@
                 <img class="history-image" src="assets/images/the-cock-tavern.jpg" alt="Cock tavern on Swords main street">
             </div>
         </div>
-        <div class="row" data-aos="fade-right">
+        <div class="row overflow" data-aos="fade-right">
             <div class="col-md-4">
                 <img class="history-image" src="assets/images/gift-card.jpg" alt="Gift card">
             </div>
